--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <body>
     <div class="div">
         <div class="contTitulo">
-            <p>Te Quiero Muchisimo</p>
+            <p>FOR YOU</p>
         </div>
         
         <svg viewBox="0 0 518 744">
